--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -2576,7 +2576,8 @@
       // determine proximity based delay range similar to how it's calculated for multiple subwoofers
       const [loDelay, hiDelay] = getDelayRangeOfFinalSub();
       const measurements = await fetch_mREW();
-      const IRPeakDelta = -1000 * measurements[cmdIdMLPIndices[commandId[nChannels]]].timeOfIRPeakSeconds; // speakers are at t=0 by now
+      const avgSubWithLPFIRPeak = await getFirstPeak(avgSubWithLPFIdx); // first IR peak
+      const IRPeakDelta = -1000 * avgSubWithLPFIRPeak; // speakers are at t=0 by now
       let loDelayLimit = IRPeakDelta <= 0 ? 2 * IRPeakDelta : -0.5 * IRPeakDelta;
       let hiDelayLimit = IRPeakDelta >= 0 ? 2 * IRPeakDelta : -0.5 * IRPeakDelta;
       loDelayLimit = Math.max(loDelayLimit, loDelay);
