--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -1718,22 +1718,24 @@
       await console.infoUpdate("Resetting default equalizer to 'Generic/Generic'...");
       await postSafe(`http://localhost:4735/eq/default-equaliser`, { manufacturer: "Generic", model: "Generic" }, "Default equaliser changed");
       console.infoUpdate(`Checking measurement names, indices and sorting...`);
-      let previousTitle = "";
+      let prevTitle = "";
       for (let i = 1; i < commandId.length; i++) {
         cmdIdIndices[commandId[i]] = [];
       }
       for (let i = 1; i <= mCount; i++) {
         // check sorting
-        if (previousTitle === "") {
-          previousTitle = measurements[i].title;
+        if (prevTitle === "") {
+          prevTitle = measurements[i].title;
         }
         else {
-          if (previousTitle >= measurements[i].title) {
-            console.error("Measurements must be sorted in REW. To fix: All SPL > Sort (A to Z button).");
+          const currTitle = measurements[i].title;
+          // checks for alphanumeric sort
+          if (!currTitle.localeCompare(prevTitle, undefined, { numeric: true, sensitivity: 'base' })) {
+            console.error(`Measurement #${i} '${currTitle}' failed sort check. To fix: All SPL > Sort (A to Z button).`);
             throw new Error;
           }
           else {
-            previousTitle = measurements[i].title;
+            prevTitle = currTitle;
           }
         }
         // sanity check
@@ -1954,7 +1956,7 @@
         await fetch_mREW(mlpIdx, 'PUT', { title: `${commandId[i]}-mlp` });
         await postNext('Smooth', mlpIdx, { smoothing: "1/48" });
         // spatially average
-        console.infoUpdate(`Spatially averaging channel ${commandId[i]} using ${indices.length} microphone position(s)...`);
+        console.infoUpdate(`Spatially averaging channel ${commandId[i]} using <${indices.length}> microphone position(s)...`);
         if (indices.length > 1) {
           await postNext('Cross corr align', indices);
         }
